codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__zellij_empty_composer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4001
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Aegis to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? for shortcuts                                                                100% context left  "
